[tool.poetry]
name = "clib"
version = "0.1.0"
description = "The Command Line Interface Bot"
authors = ["Yuliia Didenko <yu_lyan@ukr.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
